cabal-version: 3.0

version:
  0.0.1
name:
  haskell-in-production
author:
  Felix Mulder
maintainer:
  felix.mulder@gmail.com
homepage:
  https://felixmulder.com
bug-reports:
  https://github.com/felixmulder/haskell-in-production/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
extra-source-files:
  README.md

common options
  default-language:
    Haskell2010
  ghc-options:
    -- -Wall -Werror -Wredundant-constraints -fhide-source-paths
    -Wall -Werror -fhide-source-paths
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    UndecidableInstances
    ViewPatterns

executable haskell-in-production
  import:
    options
  main-is:
    Main.hs
  hs-source-dirs:
    src
  other-modules:
    Web.SimpleHttp
    Web.SimpleHttp.Class
    Web.SimpleHttp.Types
    Persist
    Log
    Types
  build-depends:
    , aeson ^>= 1.4.5.0
    , base ^>= 4.12.0.0
    , data-has ^>= 0.3.0.0
    , generic-lens ^>= 1.1.0.0
    , http-types ^>= 0.12.3
    , lens ^>= 4.18.1
    , mtl ^>= 2.2.2
    , text ^>= 1.2.3.1
    , wai ^>= 3.2.2.0
    , warp ^>= 3.3.0
